@startuml project

skinparam classAttributeIconSize 0

note as mainNote
    Multiplicities are 1:1 by default
    T stereotypes are template instantiations
end note

package app{
    () main
    class PlayerModel{
        -position : Vector2
        -speed : float
        +getPos() : Vector2
        +setPos(Vector2)
        +getSpeed() : float
        +setSpeed(float)

        +subscribeMovementListener(Listener)
        +unsubscribeMovementListener(Listener)
    }
    class Player{
        +move(Vector2)
        +getPos() : Vector2
        +getSpeed() : float

        +subscribeMovementListener(Listener)
        +unsubscribeMovementListener(Listener)

        +draw()
    }
    class PlayerListener{

    }
}

package utils{
    class Bag<type>{
        -content : unordered_set<type>
        +add(type)
        +remove(type)
        +foreach(function<void(type)>&)
    }
    class "Bag<Listener*>" as BagListener <<(T,LightBlue)>>
    class "Bag<function<void()>*>" as BagFunction <<(T,LightBlue)>>

    class GlobalAccessor<type>{
        {static} -object : type&
        {static} -initialised : bool
        -GlobalAccessor()
        {static} +create(const type&)
        {static} +instance() : const type&
    }
    class "GlobalAccessor<EventDispatcher>" as GlobalAccessorEventDispatcher <<(T,LightBlue)>>
}

package event{
    class Listener{
        {field} -callback : function<void()>
        -enabled : bool
        +isEnabled() : bool
        +enable(bool)
        +onEvent()
    }
    class Observable{
        +subscribe(Listener&)
        +unsubscribe(Listener&)
        +fireEvent()
    }
    class InputListener{
        {field} -inputTest : function<bool()>
        {field} -action : function<void()>
        {field} -actionElse : function<void()>
    }
    class EventDispatcher{
        +dispatch()
        +addInputListener(Listener&)
        +removeInputListener(Listener&)
    }
    class FrameListener{
        {field} -action : function<void()>
    }
    class Timer{
        -time : float
        {field} -callback : function<void()>
        -accumulatedTime : float
        +getTime() : float
        +setTime(float)

        +start()
        +stop()
        +reset()
    }
}

package component{
    class Component{
        -position : Vector2
        -size : Vector2
        -shown : bool
        +getPos() : Vector2
        +setPos(Vector2)
        +getSize() : Vector2
        +setSize(Vector2)
        +fit()
        +layout()
        +draw()
        +isShown() : bool
        +show(bool)
        +toStr(ostream)
    }
    class Button{
        -state : State
        -isMouseInside() : bool
        +getButtonModel() : ButtonModel
        +setButtonModel(ButtonModel)
    }
    class Container{
        +add(Component&, LayoutContraint constraint)
        +remove(LayoutContraint constraint)
    }
    class Panel{
        -backGroundColor : Color
        +GetBackGroundColor() : Color
        +setBackgroundColor(Color)
    }
    class Window{
        -title : String
        +setTitle(String)
        +run()
    }
    class Label{
        +getTextModel() : TextModel
        +setTextModel(TextModel)
    }
    class FPSLabel{
        -warningValue : int
        -lowValue : int
        -goodColor : Color
        -warningColor : Color
        -lowColor : Color
        +setWarningValue(int)
        +setLowValue(int)
        +setGoodColor(Color)
        +setWarningColor(Color)
        +setLowColor(Color)
    }
    class Box{
        -backgroundColor : Color
        -insets : Vector4
        +getBackgroundColor() : Color
        +setBackGroundColor(Color)
        +getInsets() : Vector4
        +setInsets(Vector4)
        +add(Component)
        +remove()
    }
    class Slider{
        -barThickness : int
        -buttonThickness : int
        -barPos : Vector2
        -barSize : Vector2
        -mousePoseOnKnob : Vector2
        +getBarThickness() : int
        +getButtonThickness() : int
        +setBarThickness(int)
        +setButtonThickness(int)
        +getBoundedRangeModel() : BoundedRangeModel
        +setBoundedRangeModel(BoundedRangeModel)
    }
    class Canva{
        +subscribeDrawing(function<void()>)
        +unsubscribeDrawing(function<void()>)
    }
    abstract OrientedComponent{
        -vertical : bool
        +isVertical() : bool
        +setVertical(bool)
    }
    class Gauge{
        +getBoundedRangeModel() : BoundedRangeModel
        +setBoundedRangeModel(BoundedRangeModel)

        +setBarColor(Color)
    }
    class TextInputBar{
        +getPhantomText() : string
        +setPhantomText(string)
    }
}

package layout{
    interface LayoutManager{
        +addComponent(Component, LayoutContraint constraint)
        +removeComponent(LayoutContraint constraint)
        +foreachComponents(function<void(Component)>)
        +layout(Component&)
        +toStr(ostream)
    }
    abstract class OrientedLayout{
        -vertical : bool
        +isVertical() : bool
        +setVertical(bool)
    }
    class BorderLayout{

    }
    class StackLayout{

    }
    class LayeredLayout{

    }
    class FreeLayout{

    }
}

package model{
    class TextModel{
        -text : string
        -font : Font
        -fontSize : float
        -spacing : float
        -tint : Color
        +getSize() : Vector2
        +draw()
        +getText() : string
        +setText(string)
        +getFont() : Font
        +setFont(Font)
        +getFontSize() : float
        +setFontSize(float)
        +getSpacing() : float
        +setSpacing(float)
        +getColor() : Color
        +setColor(Color)
    }
    class BoundedRangeModel{
        -minValue : int
        -maxValue : int
        -currentValue : int
        +getMinValue() : int
        +getMaxValue() : int
        +getCurrentValue() : int
        +getRatio() : float
        +setMinValue(int)
        +setMaxValue(int)
        +setCurrentValue(int)
        +setRatio(float)
        +toStr(ostream)
    }
    class Action{
        -name : string
    }
    class ActiveVariable<type>{
        -variable : type
        +get() : type
        +set(type)
        +addListener(Listener&)
        +removeListener(Listener&)
    }
    class ButtonModel{
        +subscribePress(Listener)
        +unsubscribePress(Listener)
        +firePressEvent()

        +subscribeRelease(Listener)
        +unsubscribeRelease(Listener)
        +fireReleaseEvent()

        +subscribeReleaseOutside(Listener)
        +unsubscribeReleaseOutside(Listener)
        +fireReleaseOutsideEvent()

        +subscribeHoverIn(Listener)
        +unsubscribeHoverIn(Listener)
        +fireHoverInEvent()

        +subscribeHoverOut(Listener)
        +unsubscribeHoverOut(Listener)
        +fireHoverOutEvent()

        +subscribePressedEntering(Listener)
        +unsubscribePressedEntering(Listener)
        +firePressedEnteringEvent()

        +subscribePressedLeaving(Listener)
        +unsubscribePressedLeaving(Listener)
        +firePressedLeavingEvent()
    }
}

' INHERITANCE
Listener <|-- FrameListener : +
FrameListener <|-- InputListener : +
Observable <|-- EventDispatcher : -
FrameListener <|-- Timer : +

Box <|-- Button : +
Component <|-- Container : +
Container <|-- Panel : +
Panel <|-- Window : +
Component <|-- Label : +
Label <|-- FPSLabel : +
Component <|-- Box : +
OrientedComponent <|-- Slider : +
Component <|-- Canva : +
OrientedComponent <|-- Gauge : +
Label <|-- TextInputBar : +

LayoutManager <|-- OrientedLayout : +
OrientedLayout <|.. BorderLayout : +
OrientedLayout <|.. StackLayout : +
LayoutManager <|.. LayeredLayout : +
LayeredLayout <|-- FreeLayout : +

Observable <|-- BoundedRangeModel : +
Observable <|-- Action : +
Observable <|-- ActiveVariable : -

' TEMPLATE INSTANCIATION
BagListener ..|> Bag
BagFunction ..|> Bag
GlobalAccessorEventDispatcher ..|> GlobalAccessor

' ATTRIBUTE MEMBERS
main --> Player
Player --> PlayerModel
PlayerModel --> Observable
main --> PlayerListener
main --> Window

PlayerListener --> "4" InputListener
PlayerListener --> Player

Observable --> BagListener : listeners

FrameListener --> EventDispatcher

Button --> "2" InputListener
Button --> ButtonModel

Window --> EventDispatcher
Window ..> GlobalAccessorEventDispatcher : initialize

Label --> TextModel
FPSLabel --> FrameListener
Box --> Component

Slider --> "5" Listener
Slider --> "3" Button
Slider --> "3" ButtonModel
Slider --> BoundedRangeModel
Slider --> FrameListener

Container --> LayoutManager
BorderLayout --> "3" Component
StackLayout --> "*" Component
LayeredLayout --> "*" Component

ButtonModel --> "7" Observable

Canva --> BagFunction : drawingFunctions

Gauge --> BoundedRangeModel

TextInputBar --> FrameListener
TextInputBar --> "2" Timer
TextInputBar --> "3" InputListener

@enduml